--- a/Pagina_perfil/index.html
+++ b/Pagina_perfil/index.html
@@ -10,12 +10,14 @@
 <body>
     <header>
         <div class="nav">
-            <ul class="nav-links">
+            <div class="nav-left">
                 <h1 class="nav-title">Perfil</h1>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#" class="active">My Profile</a></li>
-                <li><a href="#">Encontrar conexiones</a></li>
-            </ul>
+                <ul class="nav-links">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#" class="active">My Profile</a></li>
+                    <li><a href="#">Encontrar conexiones</a></li>
+                </ul>
+            </div>
             <button class="btn">Cerrar sesión</button>
         </div>
     </header>
